--- a/src/components/Main/Cart/Cart.css
+++ b/src/components/Main/Cart/Cart.css
@@ -1,7 +1,7 @@
 /* CART HEADER */
 .cart__header {
   padding: 0.5rem;
-  background-color: rgba(209, 209, 209, 0.521);
+  background-color: #FFCCCC;
   width: 100%;
   height: auto;
   display: flex;
@@ -27,7 +27,7 @@
 
 .card__cart {
   padding: 0.5rem;
-  background-color: rgba(209, 209, 209, 0.521);
+  background-color: #FFCCCC);
   width: 100%;
   height: auto;
   display: flex;
@@ -97,8 +97,8 @@
 .card__cart--btn_finish {
   color: white;
   padding: 0.5rem 1rem;
-  background-color: rgba(135, 206, 250, 0.671);
-  border: solid 1px rgba(135, 206, 250, 0.671);
+  background-color: #FF9999;
+  border: solid 1px #FF9999;
   border-radius: 10px;
   display: flex;
   margin: 0 auto;
