--- a/src/components/Main/main.css
+++ b/src/components/Main/main.css
@@ -13,16 +13,16 @@
 .btn {
   padding: 0.5rem 1rem;
   background-color: white;
-  border: solid 1px rgba(135, 206, 250, 0.671);
+  border: solid 1px #FF9999	;
   border-radius: 10px;
-  color: lightskyblue;
+  color: #012e67;
 }
 
 /* CARD de PRODUCTS */
 .card__product {
   margin: 0.5rem 1rem 1rem 1rem;
   padding: 0.5rem 0rem 0.75rem 0rem;
-  background-color: rgba(209, 209, 209, 0.521);
+  background-color: #FFCCCC	;
   width: 16rem;
   height: auto;
 }
@@ -86,7 +86,7 @@
   width: 6rem;
   font-size: 1.3rem;
   background-color: white;
-  border: solid 1px rgba(135, 206, 250, 0.671);
+  border: solid 1px 	#FF9999;
   border-radius: 10px;
   margin: 0.5rem 0rem 0.5rem 0rem;
 }
@@ -94,7 +94,7 @@
 .card__product--btn_qty button {
   padding: 0.25rem;
   font-size: 1.5rem;
-  color: lightskyblue;
+  color: #012e67;
   font-weight: bold;
   background-color: transparent;
   border: none;
@@ -112,7 +112,7 @@
 /* ItemDetailContainer */
 .card__detail {
   padding: 0.5rem 0rem 0.75rem 0rem;
-  background-color: rgba(209, 209, 209, 0.521);
+  background-color: #FFCCCC;
   width: 100%;
   height: auto;
   display: flex;
@@ -181,7 +181,7 @@
 .card__detail--btn_qty button {
   padding: 0.25rem;
   font-size: 1.5rem;
-  color: lightskyblue;
+  color:#012e67;
   font-weight: bold;
   background-color: transparent;
   border: none;
@@ -195,8 +195,8 @@
 .card__detail--btn_finish {
   color: white;
   padding: 0.5rem 1rem;
-  background-color: rgba(135, 206, 250, 0.671);
-  border: solid 1px rgba(135, 206, 250, 0.671);
+  background-color:#FF9999;
+  border: solid 1px#FF6666;
   border-radius: 10px;
   display: flex;
   margin: 0 auto;
@@ -207,11 +207,14 @@
   min-height: 68vh;
 }
 /* HOME */
-.d-block w-100{
-  grid-column: 2;
-    grid-row: 2;
-    color: black;
-    text-align: center;
-    align-self: center;
-    text-shadow: -5px 5px #558ABB;
+.button-primary {
+  background-color: #f7b035;;
+  border: none;
+  font-family: 'Mulish', sans-serif;
+  font-weight: 700;
+  font-size: 2rem;
+  margin: 20px auto;
+  width: 200px;
+  height: 50px;
+  cursor: pointer;
 }
